[gd_scene load_steps=29 format=2]

[ext_resource path="res://Recursos/Enemies/boss_stand.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Particles/smoke.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Enemies/boss_stand2.png" type="Texture" id=3]
[ext_resource path="res://juego/enemigos/EvilSaltarina.gd" type="Script" id=4]
[ext_resource path="res://juego/enemigos/SuperNubon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Recursos/sfx/Hit_Hurt_boss.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 401.923, 142.07 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.297852, 0.297852, 0.297852, 1, 1, 1, 1, 0.337255 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.0190114, 200 ), 0.0, 214.07, 0, 0, Vector2( 0.235741, -92.2727 ), 0.0, 0.0, 0, 0, Vector2( 0.996198, -143.182 ), -185.96, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
min_value = 0.99
max_value = 5.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 4.65824 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 0.15
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 6 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 500, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, -50, 0 )
initial_velocity = 13.31
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 4 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.144681, 0.838298 )
colors = PoolColorArray( 1, 0.914063, 0, 1, 0.942383, 0.0699425, 0.0699425, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.0380228, 169.091 ), 0.0, 434.711, 0, 0, Vector2( 0.992395, -169.091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="Curve" id=15]
min_value = 1.0
max_value = 2.5
_data = [ Vector2( 0.0342205, 2.5 ), 0.0, -6.45545, 0, 0, Vector2( 0.958175, 1.14318 ), -1.25523, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 2
emission_box_extents = Vector3( 300, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 14 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 16 )
color_ramp = SubResource( 12 )

[sub_resource type="Animation" id=18]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.170755 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=19]
resource_name = "muerte"
tracks/0/type = "value"
tracks/0/path = NodePath("ParticlesExplocion:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
length = 20.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1.00001 ),
"update": 0,
"values": [ Vector2( 0, 1200 ), Vector2( 0, -1000 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParticlesExplocion:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParticulaHumo:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 10, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ParticulaHumoPies:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 20 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 20 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "activate_enemies"
} ]
}

[sub_resource type="Animation" id=21]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite/SuperNubon2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1600.38, -1847.88 ), Vector2( -1600.53, -822.637 ), Vector2( -1800.74, -560.015 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite/SuperNubon2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/SuperNubon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1600.52, -1847.88 ), Vector2( 1600.52, -560 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite/SuperNubon:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="CapsuleShape2D" id=22]
radius = 522.389
height = 812.061

[node name="EvilSaltarina" type="Area2D"]
position = Vector2( -23.2344, 23.2344 )
scale = Vector2( 0.666, 0.666 )
collision_layer = 40
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="DetectarDano" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HeadDamage" type="CollisionShape2D" parent="DetectarDano"]
position = Vector2( 5.24197, -1858.57 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1200 )
frames = SubResource( 2 )

[node name="SuperNubon2" parent="AnimatedSprite" instance=ExtResource( 5 )]
visible = false
position = Vector2( -1800.74, -560.015 )
scale = Vector2( 1.5, 1.5 )

[node name="SuperNubon" parent="AnimatedSprite" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1600.52, -560 )
scale = Vector2( 1.5, 1.5 )

[node name="Rayos" type="Node" parent="AnimatedSprite"]

[node name="ParticulaHumo" type="Particles2D" parent="."]
position = Vector2( -9.53395, -138.242 )
emitting = false
amount = 300
lifetime = 5.0
explosiveness = 0.8
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="ParticulaHumoPies" type="Particles2D" parent="."]
position = Vector2( -5.05034, -55.5541 )
emitting = false
amount = 150
lifetime = 3.0
randomness = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="ParticlesExplocion" type="Particles2D" parent="."]
position = Vector2( -9.53395, -166.844 )
emitting = false
amount = 5000
lifetime = 60.0
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.5
process_material = SubResource( 17 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 18 )
anims/muerte = SubResource( 19 )
anims/spawn = SubResource( 20 )
anims/spawn_enemies = SubResource( 21 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = ExtResource( 6 )
volume_db = -8.676
bus = "SFX"

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -16.9876, -998.019 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.77215, -751.123 )
shape = SubResource( 22 )

[connection signal="body_entered" from="DetectarDano" to="." method="_on_DetectarDao_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
